Make sure drag&drop marker is always visible
Using inverted color make sure drag&drop marker is always visible no matter the background color

--- a/sidebar/panel.css
+++ b/sidebar/panel.css
@@ -8,6 +8,7 @@
 	--rss-tree-indent: 18px;	/* UI density: Comfortable */
 
 	--bk-color-window: #FFFFFF;
+	--bk-color-window-inverted: #000000;
 	--bk-color-dialog: #EEEEEE;
 	--bk-color-active: #F3C8BA;
 	--color-text: #000000;
